# lightsDSL

./: .gitignore  CMakeLists.txt  README.md  autogen.sh  deps.txt
docs/: README.md
examples/: pulse.lights  pulse.lts
include/: lights-dsl.h  lights-dsl.pc
src/: grammar.g  main.c
src/errors/: errors.c  errors.h
src/lexer/: lexer.c  lexer.h  token.c  token.h
src/parser/: parser.c  parser.h
src/token/: token.c  token.h
src/utils/: util.c  util.h
tests/: test.c  testing_assert.c  testing_assert.h
tests/lexer/: test_lexer.c  test_lexer.h
tests/parser/: test_parser.c  test_parser.h
tests/token/: test_token.c  test_token.h
tests/utils/: test_util.c  test_util.h
